Strict JDK8 compat